[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fred_Frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Fred.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.6914
height = 4.26073

[node name="Fred" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="FlipTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="FloorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 26 )

[node name="LineCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -5, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="LineCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="TileMapCastLeft" type="RayCast2D" parent="."]
position = Vector2( -10, -10 )
cast_to = Vector2( -15, 0 )

[node name="TileMapCastRight" type="RayCast2D" parent="."]
position = Vector2( 10, -10 )
cast_to = Vector2( 15, 0 )

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
